--- a/README
+++ b/README
@@ -55,7 +55,7 @@ DESCRIPTION
 
   MANAGING LOGGERS
     MooX::Role::Chatty tries to make the common cases easy. To that end, you
-    don't need to worry about setting up "logger" if you don't want to. IF
+    don't need to worry about setting up "logger" if you don't want to. If
     you haven't explicitly set this attribute, the first time you need it
     (by calling "logger" or "remark") a default logger will be instantiated
     for you. This logger is a Log::Any::Proxy, so you can call any of the
@@ -72,7 +72,7 @@ DESCRIPTION
     The "verbose" attribute determines the level of logging: a level of 1
     corresponds to a log level of "notice", 2 to "info", and so on. Although
     less common, you can also go the other way: -1 corresponds to "warn", -2
-    to <error>, etc. A "verbose" level of 0 is special: it suppresses any
+    to "error", etc. A "verbose" level of 0 is special: it suppresses any
     output from "remark", and of the Log::Any levels only "emergency" will
     produce output.
 
@@ -88,8 +88,8 @@ DESCRIPTION
     logging packages fill the bill, like Log::Dispatch or Log::Log4perl, in
     addition to Log::Any. For that matter, if you like the behavior of
     Log::Any but want output from your module to be different from
-    MooX::Role::Chartty logging elsewhere in your application, you can use
-    an instance of an adapter class directly. Again, if you set "logger"
+    MooX::Role::Chatty logging elsewhere in your application, you can use an
+    instance of an adapter class directly. Again, if you set "logger"
     directly, it's your responsibility to update the logger's behavior as
     appropriate if you reset "verbose".
 
@@ -103,7 +103,8 @@ DESCRIPTION
 
         Defaults to 0, and can be updated.
 
-    logger =item get_logger
+    logger
+    get_logger
         The logging engine to be used for output.
 
         The default is described above in "MANAGING LOGGERS".
@@ -135,7 +136,7 @@ DESCRIPTION
             the difference between the target verbosity level (which is what
             "level" specifies), and the actual call to the logger, which is
             always at the "notice" (or "info") log level. In other words,
-            saying "<level =" -3>> does NOT get you a call to "critical".
+            saying "level => -3" does NOT get you a call to "critical".
 
         *   If *$info* is a simple scalar, use it as the log message.
 
@@ -157,7 +158,7 @@ BUGS AND CAVEATS
     Are there, for certain, but have yet to be cataloged.
 
 VERSION
-    version 1.00
+    version 1.01
 
 AUTHOR
     Charles Bailey <cbail@cpan.org>
